--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "gymnasium>=1.1.1",
+    "ipykernel>=6.29.5",
+    "ipython>=9.1.0",
     "torch>=2.6.0",
 ]
 
