--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,15 @@ dependencies = [
     "gymnasium>=1.1.1",
     "ipykernel>=6.29.5",
     "ipython>=9.1.0",
+    "pytest-mock>=3.14.0",
     "torch>=2.6.0",
 ]
 
 [tool.pytest.ini_options]
 addopts = "--tb=line"
+testpaths = [
+    "tests",
+]
+
+[tool.black]
+line-length = 120
