--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipython>=9.1.0",
     "pytest-mock>=3.14.0",
     "torch>=2.6.0",
+    "torch-geometric>=2.6.1",
 ]
 
 [tool.pytest.ini_options]
