--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,19 @@ dependencies = [
     "gymnasium>=1.1.1",
     "ipykernel>=6.29.5",
     "ipython>=9.1.0",
-    "pytest-mock>=3.14.0",
+    "lmdb>=1.6.2",
+    "numpy>=2.2.4",
+    "tensorboard>=2.19.0",
     "torch>=2.6.0",
     "torch-geometric>=2.6.1",
+    "torch-tb-profiler>=0.4.3",
 ]
 
-[tool.pytest.ini_options]
-addopts = "--tb=line"
-testpaths = [
-    "tests",
-]
+# [tool.pytest.ini_options]
+# addopts = "--tb=line"
+# testpaths = [
+#     "tests",
+# ]
 
 [tool.black]
 line-length = 120
