--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "flask>=3.1.1",
+    "gunicorn>=23.0.0",
     "gymnasium>=1.1.1",
     "ipykernel>=6.29.5",
     "ipython>=9.1.0",
     "lmdb>=1.6.2",
     "numpy>=2.2.4",
+    "scipy>=1.15.3",
     "tensorboard>=2.19.0",
     "torch>=2.6.0",
     "torch-geometric>=2.6.1",
