--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dmypy.json
 logs/
 training_examples/
 model_checkpoints/
+runs/
+.claude/
+loop_status.json
+runtime_config.json
+self_play_games_status.json
